Fix the profile image from being too large

--- a/resources/scss/partials/_profile-view.scss
+++ b/resources/scss/partials/_profile-view.scss
@@ -11,6 +11,7 @@
 
 .content .profile__img {
     display: block;
+    width: auto;
     height: 270px;
     margin: rem-calc(40) auto 1em;
     padding: 0;
